objects/Interconnection_Task__c.object
<CustomObject>
    <description>Custom object for Interconnection to be used to assign other users Tasks. Different than Standard Tasks because any user can update anyone&apos;s task, a requested feature.</description>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that will be responsible for the task</description>
        <inlineHelpText>The user that will be responsible for the task</inlineHelpText>
        <label>Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interconnection_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_History__c</fullName>
        <inlineHelpText>Tracks all comments made to Task</inlineHelpText>
        <label>Comments History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Enter ongoing updates about the task.</description>
        <inlineHelpText>Enter ongoing updates about the task.</inlineHelpText>
        <label>New Comment</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Complete__c</fullName>
        <inlineHelpText>Time Stamps when the Status moves to Complete</inlineHelpText>
        <label>Date Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Please explain the task, be as descriptive as possible.</description>
        <inlineHelpText>Please explain the task, be as descriptive as possible.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The date that the task is set to be completed.</description>
        <inlineHelpText>The date that the task is set to be completed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Line_Reference__c</fullName>
        <description>Please enter the relevant email subject line to allow for easy searching of email, if applicable.</description>
        <inlineHelpText>Please enter the relevant email subject line to allow for easy searching of email, if applicable.</inlineHelpText>
        <label>Email Subject Line Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Interconnection Application</description>
        <inlineHelpText>Related Interconnection Application</inlineHelpText>
        <label>Interconnection Application</label>
        <referenceTo>Interconnection_Application__c</referenceTo>
        <relationshipLabel>Interconnection Tasks</relationshipLabel>
        <relationshipName>Interconnection_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>The level of priority the user has assigned to the task.</description>
        <inlineHelpText>The level of priority the user has assigned to the task.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interconnection Task</label>
    <nameField>
        <label>Interconnection Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interconnection Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>